update to page and style

--- a/index.html
+++ b/index.html
@@ -3,8 +3,7 @@
     <head>
         <title>Loet Codes</title>
         <meta name="viewport" content="width=device-width, initial-scale=1">
-        <!-- <link rel="stylesheet" href="css/main.css"> -->
-        <link rel="stylesheet" href="css/main_v02.css">
+        <link rel="stylesheet" href="css/main.css">
         <link rel="stylesheet" href="css/navigation.css">
     </head>
     <body>
@@ -33,7 +32,7 @@
                 </div>
                 <div class="intro-summary">
                     <div class="descrBox">
-                        <p class="detailText">I am a human, possibly, who enjoys creating on and off the web. <br><br>I typically work in frontend web development but enjoy dabbling in the backend as well, from time to time.</p>
+                        <p class="detailText">I am a human, possibly, who enjoys creating on and off the web. <br><br>I typically work in frontend web development. However, don't be surprised when you find me in the backend as well. I dabble around there from time to time.</p>
                     </div>
                     <!-- <div class="scroll-tip">
                         <span class="tip-text">scroll</span>
@@ -67,7 +66,7 @@
                 </div>
                 <div class="section-content about-core">
                     <p>I enjoy <span class="highlight-text">creating</span> things mostly under the name Loet. Tinkering is second nature to me, hence I break as much as I make, if not more.</p>
-                    <p>I am constantly <span class="highlight-text">learning about all the things I don't know</span>, and they are quite a number! It's a life-long journey.</p>
+                    <p>Constantly <span class="highlight-text">learning about all the things I don't know</span>, and they are quite a number!</p>
                     <p>I tend to laugh at life's ironies, read a bunch of books at the same time &#38; enjoy most things tech.</p>
                     <p>I can be<span class="highlight-text"> overly curious</span> at times. It's no wonder I am attracted to problem-solving and exploration.</p>
                     <p>Family, friends, the great outdoors &#38; my future pet are quite dear to me.</p>
@@ -88,7 +87,7 @@
                 </div>                
                 <div class="section-content about-skills">
                     <div class="skill-row">
-                        <p class="skill-group">developing</p>
+                        <p class="skill-group">develop</p>
                         <ul class="skills-list">
                             <li>HTML &#38; CSS</li>
                             <li>JavaScript</li>
@@ -100,14 +99,14 @@
                         </ul>
                     </div>
                     <div class="skill-row">
-                        <p class="skill-group">designing</p>
+                        <p class="skill-group">design</p>
                         <ul class="skills-list">
                             <li>Figma</li>
                             <li>Adobe Sketch</li>
                         </ul>
                     </div>
                     <div class="skill-row">
-                        <p class="skill-group">learning</p>
+                        <p class="skill-group">learn</p>
                         <ul class="skills-list">
                             <li>NodeJS</li>
                             <li>React &#38; more JS</li>
