--- a/projects/projects.html
+++ b/projects/projects.html
@@ -3,15 +3,15 @@
 <head>
 	<title>Loet Projects</title>
 	<meta name="viewport" content="width=device-width, initial-scale=1">
-	<link rel="stylesheet" href="css/navigation_top.css">
-	<link rel="stylesheet" href="css/projects_page.css">
+	<link rel="stylesheet" href="../css/navigation_top.css">
+	<link rel="stylesheet" href="../css/projects_page.css">
 </head>
 <body class="main-body">
 
 	<!-- MAIN PORTFOLIO NAVIGATION MENU -->
 	<div id="menu-bar" class="menu-container">
 		<a href="index.html#home" id="main-logo" class="brand-logo">
-			<img class="img-icon" src="images/social_icons/loet_wheat_logo.png" alt="loet logo">
+			<img class="img-icon" src="../images/icons/loet_wheat_logo.png" alt="loet logo">
 		</a>
 
 		<nav id="navigation" class="menu-links">
@@ -68,22 +68,22 @@
 			<!-- Image slider -->
 			<div class="img-slider">
 				<div class="img-card">
-					<img src="images/project_imgs/BlogApp/BlogApp_CoverImage.jpg" alt="Project Menu Page">
+					<img src="../images/project_imgs/BlogApp/BlogApp_CoverImage.jpg" alt="Project Menu Page">
 				</div>
 				<div class="img-card">
-					<img src="images/project_imgs/BlogApp/BlogApp_CoverImage.jpg" alt="Project Menu Page">
+					<img src="../images/project_imgs/BlogApp/BlogApp_CoverImage.jpg" alt="Project Menu Page">
 				</div>
 				<div class="img-card">
-					<img src="images/project_imgs/BlogApp/BlogApp_CoverImage.jpg" alt="Project Menu Page">
+					<img src="../images/project_imgs/BlogApp/BlogApp_CoverImage.jpg" alt="Project Menu Page">
 				</div>
 				<div class="img-card">
-					<img src="images/project_imgs/BlogApp/BlogApp_CoverImage.jpg" alt="Project Menu Page">
+					<img src="../images/project_imgs/BlogApp/BlogApp_CoverImage.jpg" alt="Project Menu Page">
 				</div>
 			</div>
 
 			<!-- Project demo gif -->
 			<div class="p-demo-container">
-				<img class="demo-gif" src="images/project_imgs/BlogApp/BlogApp_CoverImage.jpg" alt="Project Demo gif">
+				<img class="demo-gif" src="../images/project_imgs/BlogApp/BlogApp_CoverImage.jpg" alt="Project Demo gif">
 			</div>
 
 		</div>
@@ -99,7 +99,7 @@
 					<p>Game</p>
 					<div class="link-img">
 						<a class="external-link" href="https://mastermind-gems.herokuapp.com" title="Play Game" target="_blank">
-							<img class="link-icon" src="images/project_imgs/MasterMind/MM_Project_logo_3.png" alt="Game logo">
+							<img class="link-icon" src="../images/project_imgs/MasterMind/MM_Project_logo_3.png" alt="Game logo">
 						</a>
 					</div>
 				</div>
@@ -107,7 +107,7 @@
 					<p>Code</p>
 					<div class="link-img">
 						<a class="external-link" href="https://github.com/lulets/master-mind-game" title="Source Code" target="_blank">
-							<img class="link-icon" src="images/social_icons/GitHub_Logo.png" alt="GitHub logo">
+							<img class="link-icon" src="../images/icons/GitHub_Logo.png" alt="GitHub logo">
 						</a>
 					</div>
 				</div>
@@ -158,19 +158,19 @@
 			<!-- Image slider -->
 			<div class="img-slider">
 				<div class="img-card">
-					<img src="images/project_imgs/FringeMemory/FringeMemory_00_NewGameGrid.png" alt="Project Menu Page">
+					<img src="../images/project_imgs/FringeMemory/FringeMemory_00_NewGameGrid.png" alt="Project Menu Page">
 				</div>
 				<div class="img-card">
-					<img src="images/project_imgs/FringeMemory/FringeMemory_01_HalfPlayed.png">
+					<img src="../images/project_imgs/FringeMemory/FringeMemory_01_HalfPlayed.png">
 				</div>
 				<div class="img-card">
-					<img src="images/project_imgs/FringeMemory/FringeMemory_02_FullWin.png">
+					<img src="../images/project_imgs/FringeMemory/FringeMemory_02_FullWin.png">
 				</div>
 			</div>
 
 			<!-- Project demo gif -->
 			<div class="p-demo-container">
-				<img class="demo-gif" src="images/project_imgs/FringeMemory/DemoGif_FringeMemory.gif" alt="Project Demo gif">
+				<img class="demo-gif" src="../images/project_imgs/FringeMemory/DemoGif_FringeMemory.gif" alt="Project Demo gif">
 			</div>
 
 		</div>
@@ -186,7 +186,7 @@
 					<p>Code</p>
 					<div class="link-img">
 						<a class="external-link" href="https://github.com/lulets/Fringe_MemoryGame" title="Source Code" target="_blank">
-							<img class="link-icon" src="images/social_icons/GitHub_Logo.png" alt="GitHub logo">
+							<img class="link-icon" src="../images/icons/GitHub_Logo.png" alt="GitHub logo">
 						</a>
 					</div>
 				</div>
@@ -206,7 +206,7 @@
 				</div>
 			</div>
 			<div class="hero-right">
-				<img class="project-img" src="images/project_imgs/MasterMind/MM_CoverImage.png" alt="project thumbnail">
+				<img class="project-img" src="../images/project_imgs/MasterMind/MM_CoverImage.png" alt="project thumbnail">
 			</div>
 		</div>
 
@@ -246,28 +246,28 @@
 			<!-- Image slider -->
 			<div class="img-slider">
 				<div class="img-card">
-					<img src="images/project_imgs/MasterMind/MM_DemoPic_01_MenuPg.png" alt="Project Menu Page">
+					<img src="../images/project_imgs/MasterMind/MM_DemoPic_01_MenuPg.png" alt="Project Menu Page">
 				</div>
 				<div class="img-card">
-					<img src="images/project_imgs/MasterMind/MM_DemoPic_05_4_Board.png" alt="Four Board Page">
+					<img src="../images/project_imgs/MasterMind/MM_DemoPic_05_4_Board.png" alt="Four Board Page">
 				</div>
 				<div class="img-card">
-					<img src="images/project_imgs/MasterMind/MM_DemoPic_02_BoardsPg.png" alt="Board Menu Page">
+					<img src="../images/project_imgs/MasterMind/MM_DemoPic_02_BoardsPg.png" alt="Board Menu Page">
 				</div>
 				<div class="img-card">
-					<img src="images/project_imgs/MasterMind/MM_DemoPic_03_InstructionsPg.png" alt="Instructions Page">
+					<img src="../images/project_imgs/MasterMind/MM_DemoPic_03_InstructionsPg.png" alt="Instructions Page">
 				</div>
 				<div class="img-card">
-					<img src="images/project_imgs/MasterMind/MM_DemoPic_06_HintsView.png" alt="Hints View Page">
+					<img src="../images/project_imgs/MasterMind/MM_DemoPic_06_HintsView.png" alt="Hints View Page">
 				</div>
 				<div class="img-card">
-					<img src="images/project_imgs/MasterMind/MM_DemoPic_06_NewGameView.png" alt="New Game Page">
+					<img src="../images/project_imgs/MasterMind/MM_DemoPic_06_NewGameView.png" alt="New Game Page">
 				</div>
 			</div>
 
 			<!-- Project demo gif -->
 			<div class="p-demo-container">
-				<img class="demo-gif" src="images/project_imgs/MasterMind/MM_DemoGif_02_GamePlay_02_WithBtns.gif" alt="Project Demo gif">
+				<img class="demo-gif" src="../images/project_imgs/MasterMind/MM_DemoGif_02_GamePlay_02_WithBtns.gif" alt="Project Demo gif">
 			</div>
 		</div>
 
@@ -282,7 +282,7 @@
 					<p>Game</p>
 					<div class="link-img">
 						<a class="external-link" href="https://mastermind-gems.herokuapp.com" title="Play Game" target="_blank">
-							<img class="link-icon" src="images/project_imgs/MasterMind/MM_Project_logo_3.png" alt="Game logo">
+							<img class="link-icon" src="../images/project_imgs/MasterMind/MM_Project_logo_3.png" alt="Game logo">
 						</a>
 					</div>
 				</div>
@@ -290,7 +290,7 @@
 					<p>Code</p>
 					<div class="link-img">
 						<a class="external-link" href="https://github.com/lulets/master-mind-game" title="Source Code" target="_blank">
-							<img class="link-icon" src="images/social_icons/GitHub_Logo.png" alt="GitHub logo">
+							<img class="link-icon" src="../images/icons/GitHub_Logo.png" alt="GitHub logo">
 						</a>
 					</div>
 				</div>
@@ -351,16 +351,16 @@
 		<!-- SOCIAL ICONS  -->
 		<div class="contact-links">
 			<a class="social-link" href="https://twitter.com/loetcodes" title="twitter">
-				<img class="social-icon" src="images/social_icons/twitter-light-wheat-40px.png" alt="Twitter link">
+				<img class="social-icon" src="../images/icons/twitter-light-wheat-40px.png" alt="Twitter link">
 			</a>
 			<!-- <a class="social-link" href="mailto:luletco@gmail.com" title="mail">
 				<img class="social-icon" src="images/social_icons/mail-light-wheat-40px.png" alt="email link">
 			</a> -->
 			<a class="social-link" href="https://github.com/loetcodes" title="github">
-				<img class="social-icon" src="images/social_icons/github-light-wheat-40px.png" alt="Github link">
+				<img class="social-icon" src="../images/icons/github-light-wheat-40px.png" alt="Github link">
 			</a>
 			<a class="social-link" href="https://codepen.io/loetcodes" title="codepen">
-				<img class="social-icon" src="images/social_icons/codepen-light-wheat-filled-40px.png" alt="Codepen link">
+				<img class="social-icon" src="../images/icons/codepen-light-wheat-filled-40px.png" alt="Codepen link">
 			</a>
 		</div>
 	</footer>
