update to landing page

--- a/index.html
+++ b/index.html
@@ -28,7 +28,7 @@
             <div class="main-summary main-about">
                 <div class="headingView pageTitle">
                     <h2>About</h2>
-                    <p class="subtitle">A couple of bits about who I am</p>
+                    <p class="subtitle">A couple of bits about me</p>
                 </div>
                 <div class="intro-summary">
                     <div class="descrBox">
@@ -311,7 +311,7 @@
             </div>
             <div class="intro-summary">
                 <div class="descrBox">
-                    <p class="detailText">A front-end developer who <span class="highlight-text">builds things</span> for the web in this grand life adventure.</p>
+                    <p class="detailText"><span class="highlight-text">building things</span> for the web in this grand life adventure.</p>
                 </div>
             </div>
             <div class="intro-contact">
