added navigation functionality

--- a/index.html
+++ b/index.html
@@ -8,7 +8,7 @@
     </head>
     <body>
         <!-- Logo and menu navigation -->
-        <nav id="nav-bar" class="nav-container">
+        <nav id="navbar" class="nav-container">
             <a href="#home" id="main-logo" class="brand-logo">
                 <img class="img-icon" src="images/icons/loet_wheat_logo.png" alt="loet logo">
             </a>
@@ -258,7 +258,6 @@
                 </div> -->
 
             </div>
-            
 
         </section>
 
@@ -323,4 +322,5 @@
         </section>
 
     </body>
+    <script src="js/navigation.js"></script>
 </html>
