--- a/projects/projects.html
+++ b/projects/projects.html
@@ -9,7 +9,7 @@
 </head>
 <body>
 	<!-- Logo and menu navigation -->
-	<nav id="nav-bar" class="nav-container">
+	<nav id="navbar" class="nav-container">
 		<a href="../index.html" id="main-logo" class="brand-logo">
 			<img class="img-icon" src="../images/icons/loet_wheat_logo.png" alt="loet logo">
 		</a>
@@ -599,4 +599,5 @@
 	</footer>
 
 </body>
+<script src="../js/navigation.js"></script>
 </html>
