added dark/light mode switch

--- a/index.html
+++ b/index.html
@@ -17,6 +17,13 @@
                     <a class="nav-link" href="#projects">projects</a>
                     <!-- <a class="nav-link" href="blog/blog.html">blog</a> -->
                     <a class="nav-link" href="#contacts">contacts</a>
+                    <div class="mode-switch-wrapper">
+                        <label class="mode-switch" for="modeswitch">
+                            <input type="checkbox" id="modeswitch">
+                            <div class="toggle round"></div>
+                        </label>
+                    </div>
+
                 </div>
             </div>
         </nav>
@@ -321,5 +328,5 @@
         </section>
 
     </body>
-    <script src="js/navigation.js"></script>
+    <script src="js/main.js"></script>
 </html>
