changes to dark mode

--- a/index.html
+++ b/index.html
@@ -58,7 +58,7 @@
             </div>
 
             <!-- Core Personal skills -->
-            <div class="main-core summary">
+            <div class="summary main-core">
                 <div class="section-heading">
                     <div class="title">
                         <p>at the <br>core</p>
@@ -82,7 +82,7 @@
             </div>
 
             <!-- Main skills summary -->
-            <div class="main-skills summary">
+            <div class="summary main-skills">
                 <div class="section-heading">
                     <div class="title">
                         <p>my <br>toolbox<br></p>
