added mode change to projects page

--- a/index.html
+++ b/index.html
@@ -252,7 +252,7 @@
                     </div>
 
                 </div>
-                <!-- <div class="social-links">
+                <div class="socials">
                     <a class="social-link" href="mailto:luletco@gmail.com" title="mail"><img class="social-icon" src="images/icons/mail-light-wheat-40px.png" alt="email link">
                     </a>
                     <a class="social-link" href="https://twitter.com/loetcodes" title="twitter"><img class="social-icon" src="images/icons/twitter-light-wheat-40px.png" alt="Twitter link">
@@ -261,7 +261,7 @@
                     </a>
                     <a class="social-link" href="https://codepen.io/loetcodes" title="codepen"><img class="social-icon" src="images/icons/codepen-light-wheat-filled-40px.png" alt="Codepen link">
                     </a>
-                </div> -->
+                </div>
 
             </div>
 
@@ -279,9 +279,6 @@
                     <p>let's<br>talk</p>
                 </div> -->
                 <div class="intro-summary">
-                    <!-- <div class="descr-box">
-                        <p class="detailText">I am currently looking for <span class="highlight-text">a new gig</span> preferrably a full-time position. You can check out my resume here.<br><br>I am open to freelancing &#38; working on open source projects. <br><br> If you have any of those, or you just want to chat, send me an email or reach out on any of my social links. Lets chat, preferrably over coffee!</p>
-                    </div> -->
                     <div class="descrBox">
                         <p class="detailText">If you want to chat or collaborate on a project feel free to reach out through any of my links. <br><br> Now that you got this far, you should know I am currently looking for <span class="highlight-text">a new gig</span> preferrably a full-time position. You can check out my conventional resume here, if you like. I am also open to working on freelance and open source projects. So...lets chat!</p>
                     </div>
