--- a/projects/projects.html
+++ b/projects/projects.html
@@ -18,6 +18,12 @@
 				<a class="nav-link" href="../index.html#projects">projects</a>
 				<!-- <a class="nav-link" href="blog/blog.html">blog</a> -->
 				<a class="nav-link" href="../index.html#contacts">contacts</a>
+				<div class="mode-switch-wrapper">
+					<label class="mode-switch" for="modeswitch">
+						<input type="checkbox" id="modeswitch">
+						<div class="toggle round"></div>
+					</label>
+				</div>
 			</div>
 		</div>
 	</nav>
