change to projects page layout

--- a/index.html
+++ b/index.html
@@ -71,11 +71,13 @@
                     <p>create<br>destroy<br>mend<br>repeat</p>
                 </div>
                 <div class="section-content about-core">
-                    <p>I enjoy <span class="highlight-text">creating</span> things mostly under the name Loet. Tinkering is second nature to me, hence I break as much as I make, if not more.</p>
+                    <p><span class="highlight-text">Tinkering </span> is second nature to me, hence I break as much as I make, if not more. </p>
                     <p>Constantly <span class="highlight-text">learning about all the things I don't know</span>, and they are quite a number!</p>
-                    <p>I tend to laugh at life's ironies, read a bunch of books at the same time &#38; enjoy most things tech.</p>
-                    <p>I can be<span class="highlight-text"> overly curious</span> at times. It's no wonder I am attracted to problem-solving and exploration.</p>
-                    <p>Family, friends, the great outdoors &#38; my future pet are quite dear to me.</p>
+
+                    <p>I tend to read a bunch of books at the same time, <span class="highlight-text">laugh at life's ironies</span> &#38; try to catch my dreams in the wind.</p>
+
+                    <p>I can be<span class="highlight-text"> overly curious</span> at times. It's no wonder I am attracted to tech, problem-solving and exploration.</p>
+                    <p><span class="highlight-text">Family, friends</span>, the great outdoors &#38; my future pet are quite dear to me.</p>
                     <p><span class="highlight-text">Collaboration &#38; Inclusivity!</span> It's exciting to see what a couple of minds can make when brought together.</p>
                     <p><span class="highlight-text">Adventure</span> is out there, need I say more!</p>
                 </div>
@@ -98,7 +100,6 @@
                             <li>HTML &#38; CSS</li>
                             <li>JavaScript</li>
                             <li>Python</li>
-                            <li>Django</li>
                             <li>JQuery</li>
                             <li>Bootstrap</li>
                             <li>Git &#38; GitHub</li>
@@ -130,10 +131,7 @@
                     <h2>Projects</h2>
                     <p class="subtitle">Some things I've made</p>
                 </div>
-                <!-- <div class="background-text">
-                    <div class="line-graphic"></div>
-                    <p>some <br>content</p>
-                </div> -->
+
                 <div class="projectsContainer">
                     <!-- PROJECT 1 -->
                     <div class="cardTile projectCard">
@@ -166,21 +164,19 @@
                         </div>
                         <div class="cardDetails detailView">
                             <div class="cardHeading">
-                                <h3 class="projectTitle">Decode Space</h3>
-                                <p class="projectType">Blogging app</p>
+                                <h3 class="projectTitle">Imagery Map Slider</h3>
+                                <p class="projectType">Web app</p>
                             </div>
                             <div class="cardSummary">
                                 <div class="descrBox">
-                                    <p class="detailText">Online blogging application with code highlighting and multiple user capabilities used to write dev tutorials.</p>
+                                    <p class="detailText">Web mapping application used to compare multiple imagery datasets on a map.</p>
                                 </div>
                             </div>
                             <div class="projectTech">
-                                <span>Python</span>
-                                <span>Django</span>
-                                <span>postgresql</span>
+                                <span>ArcGIS Web API</span>
+                                <span>JavaScript</span>
                                 <span>HTML5</span>
                                 <span>CSS3</span>
-                                <span>JavaScript</span>
                             </div>
                             <a class="projectLink" href="projects/projects.html#blogging-app">More</a>  
                         </div>
@@ -208,8 +204,35 @@
                             <a class="projectLink" href="projects/projects.html#fringe-memory">More</a>  
                         </div>
                     </div>
-        
+
                     <!-- PROJECT 4 -->
+                    <div class="cardTile projectCard">
+                        <div class="cardImg thumbnailView">
+                            <img class="projectImg" src="images/project_imgs/BlogApp/BlogApp_CoverImage.jpg" alt="project thumbnail">
+                        </div>
+                        <div class="cardDetails detailView">
+                            <div class="cardHeading">
+                                <h3 class="projectTitle">Decode Space</h3>
+                                <p class="projectType">Blogging app</p>
+                            </div>
+                            <div class="cardSummary">
+                                <div class="descrBox">
+                                    <p class="detailText">Online blogging application with code highlighting and multiple user capabilities used to write dev tutorials.</p>
+                                </div>
+                            </div>
+                            <div class="projectTech">
+                                <span>Python</span>
+                                <span>Django</span>
+                                <span>postgresql</span>
+                                <span>HTML5</span>
+                                <span>CSS3</span>
+                                <span>JavaScript</span>
+                            </div>
+                            <a class="projectLink" href="projects/projects.html#blogging-app">More</a>  
+                        </div>
+                    </div>
+        
+                    <!-- PROJECT 5 -->
                     <div class="cardTile projectCard">
                         <div class="cardImg thumbnailView">
                             <img class="projectImg" src="images/graphics/nature-sunset-simple-minimal.png" alt="project thumbnail">
@@ -252,7 +275,7 @@
                     </div>
 
                 </div>
-                <div class="socials">
+                <div class="social">
                     <a class="social-link" href="mailto:luletco@gmail.com" title="mail"><img class="social-icon" src="images/icons/mail-light-wheat-40px.png" alt="email link">
                     </a>
                     <a class="social-link" href="https://twitter.com/loetcodes" title="twitter"><img class="social-icon" src="images/icons/twitter-light-wheat-40px.png" alt="Twitter link">
@@ -313,14 +336,14 @@
             </div>
             <div class="intro-summary">
                 <div class="descrBox">
-                    <p class="detailText"><span class="highlight-text">building things</span> for the web in this grand life adventure.</p>
+                    <p class="detailText"><span class="highlight-text">I build things</span> for the web in this grand life adventure.</p>
                 </div>
             </div>
             <div class="intro-contact">
-                    <a class="social-link" href="mailto:luletco@gmail.com" title="mail">mail</a>
-                    <a class="social-link" href="https://twitter.com/loetcodes" title="twitter">twitter</a>
-                    <a class="social-link" href="https://codepen.io/loetcodes" title="codepen">codepen</a>
-                    <a class="social-link" href="https://github.com/loetcodes" title="github">github</a>
+                <a class="social-link" href="mailto:luletco@gmail.com" title="mail">mail</a>
+                <a class="social-link" href="https://twitter.com/loetcodes" title="twitter">twitter</a>
+                <a class="social-link" href="https://codepen.io/loetcodes" title="codepen">codepen</a>
+                <a class="social-link" href="https://github.com/loetcodes" title="github">github</a>
             </div>
         </section>
 
