added screenshots for map app

--- a/index.html
+++ b/index.html
@@ -160,11 +160,11 @@
                     <!-- PROJECT 2 -->
                     <div class="cardTile projectCard">
                         <div class="cardImg thumbnailView">
-                            <img class="projectImg" src="images/project_imgs/BlogApp/BlogApp_CoverImage.jpg" alt="project thumbnail">
+                            <img class="projectImg" src="images/project_imgs/MapImagerySlider/MapSlider_00_Cover.png" alt="project thumbnail">
                         </div>
                         <div class="cardDetails detailView">
                             <div class="cardHeading">
-                                <h3 class="projectTitle">Imagery Map Slider</h3>
+                                <h3 class="projectTitle">Map Imagery Slider</h3>
                                 <p class="projectType">Web app</p>
                             </div>
                             <div class="cardSummary">
@@ -431,7 +431,7 @@
                     </div>
                 </div>
                 <div class="hero-right">
-                    <img class="project-img" src="images/project_imgs/MasterMind/MM_CoverImage.png" alt="project thumbnail">
+                    <img class="project-img" src="images/project_imgs/MapImagerySlider/MapSlider_00_Cover.png" alt="project thumbnail">
                 </div>
             </div>        
             <!-- Project details View -->
@@ -461,27 +461,30 @@
                 <!-- Image slider -->
                 <div class="img-slider">
                     <div class="img-card">
-                        <img src="images/project_imgs/MasterMind/MM_DemoPic_01_MenuPg.png" alt="Project Menu Page">
+                        <img src="images/project_imgs/MapImagerySlider/MapSlider_01.png" alt="Desktop Landing">
                     </div>
                     <div class="img-card">
-                        <img src="images/project_imgs/MasterMind/MM_DemoPic_05_4_Board.png" alt="Four Board Page">
+                        <img src="images/project_imgs/MapImagerySlider/MapSlider_05.png" alt="Mobile Landing">
                     </div>
                     <div class="img-card">
-                        <img src="images/project_imgs/MasterMind/MM_DemoPic_02_BoardsPg.png" alt="Board Menu Page">
+                        <img src="images/project_imgs/MapImagerySlider/MapSlider_03.png" alt="Desktop Help view">
                     </div>
                     <div class="img-card">
-                        <img src="images/project_imgs/MasterMind/MM_DemoPic_03_InstructionsPg.png" alt="Instructions Page">
+                        <img src="images/project_imgs/MapImagerySlider/MapSlider_06.png" alt="Mobile Help view">
                     </div>
                     <div class="img-card">
-                        <img src="images/project_imgs/MasterMind/MM_DemoPic_06_HintsView.png" alt="Hints View Page">
+                        <img src="images/project_imgs/MapImagerySlider/MapSlider_02.png" alt="Desktop List View">
                     </div>
                     <div class="img-card">
-                        <img src="images/project_imgs/MasterMind/MM_DemoPic_06_NewGameView.png" alt="New Game Page">
+                        <img src="images/project_imgs/MapImagerySlider/MapSlider_07.png" alt="Mobile List View">
+                    </div>
+                    <div class="img-card">
+                        <img src="images/project_imgs/MapImagerySlider/MapSlider_04.png" alt="Desktop view">
                     </div>
                 </div>
                 <!-- Project demo gif -->
                 <div class="p-demo-container">
-                    <img class="demo-gif" src="images/project_imgs/MasterMind/MM_DemoGif_02_GamePlay_02_WithBtns.gif" alt="Project Demo gif">
+                    <img class="demo-gif" src="images/project_imgs/MapImagerySlider/MapSlider_Demo.gif" alt="Project Demo gif">
                 </div>
             </div>
             <!-- Project Links -->
@@ -494,8 +497,8 @@
                     <div class="single-project-link">
                         <p>Demo App</p>
                         <div class="link-img">
-                            <a class="external-link" href="http://map-comparison.herokuapp.com" title="View Demo" target="_blank">
-                                <img class="link-icon" src="images/project_imgs/MasterMind/MM_Project_logo_3.png" alt="Game logo">
+                            <a class="external-link" href="http://map-comparison.herokuapp.com" title="View Demo" target="_blank" style="background:black">
+                                Map Slider
                             </a>
                         </div>
                     </div>
