added scroll tip and removed unnecessary arrow icons replacing with unicode char instead

--- a/index.html
+++ b/index.html
@@ -40,10 +40,10 @@
                     <div class="descrBox">
                         <p class="detailText">I am a human, possibly, who enjoys creating on and off the web. <br><br>I typically work in frontend web development. However, don't be surprised when you find me in the backend as well. I dabble around there from time to time.</p>
                     </div>
-                    <!-- <div class="scroll-tip">
+                    <div class="scroll-tip">
                         <span class="tip-text">scroll</span>
-                        <img class="arrow-img" src="images/icons/right_arrow_black.png">
-                    </div> -->    
+                        <div></div>
+                    </div>    
                 </div>
                 <div class="social">
                     <a class="social-link" href="mailto:luletco@gmail.com" title="mail"><img class="social-icon" src="images/icons/mail-light-wheat-40px.png" alt="email link">
