faster menu transition and edit to projects page

--- a/index.html
+++ b/index.html
@@ -73,9 +73,7 @@
                 <div class="section-content about-core">
                     <p><span class="highlight-text">Tinkering </span> is second nature to me, hence I break as much as I make, if not more. </p>
                     <p>Constantly <span class="highlight-text">learning about all the things I don't know</span>, and they are quite a number!</p>
-
                     <p>I tend to read a bunch of books at the same time, <span class="highlight-text">laugh at life's ironies</span> &#38; try to catch my dreams in the wind.</p>
-
                     <p>I can be<span class="highlight-text"> overly curious</span> at times. It's no wonder I am attracted to tech, problem-solving and exploration.</p>
                     <p><span class="highlight-text">Family, friends</span>, the great outdoors &#38; my future pet are quite dear to me.</p>
                     <p><span class="highlight-text">Collaboration &#38; Inclusivity!</span> It's exciting to see what a couple of minds can make when brought together.</p>
@@ -100,8 +98,6 @@
                             <li>HTML &#38; CSS</li>
                             <li>JavaScript</li>
                             <li>Python</li>
-                            <li>JQuery</li>
-                            <li>Bootstrap</li>
                             <li>Git &#38; GitHub</li>
                         </ul>
                     </div>
@@ -131,7 +127,6 @@
                     <h2>Projects</h2>
                     <p class="subtitle">Some things I've made</p>
                 </div>
-
                 <div class="projectsContainer">
                     <!-- PROJECT 1 -->
                     <div class="cardTile projectCard">
@@ -273,7 +268,6 @@
                             </div>
                         </div>
                     </div>
-
                 </div>
                 <div class="social">
                     <a class="social-link" href="mailto:luletco@gmail.com" title="mail"><img class="social-icon" src="images/icons/mail-light-wheat-40px.png" alt="email link">
@@ -285,9 +279,7 @@
                     <a class="social-link" href="https://codepen.io/loetcodes" title="codepen"><img class="social-icon" src="images/icons/codepen-light-wheat-filled-40px.png" alt="Codepen link">
                     </a>
                 </div>
-
             </div>
-
         </section>
 
         <!-- FIRST PROJECT - MASTERMIND-->
@@ -497,8 +489,7 @@
                     <div class="single-project-link">
                         <p>Demo App</p>
                         <div class="link-img">
-                            <a class="external-link" href="http://map-comparison.herokuapp.com" title="View Demo" target="_blank" style="background:black">
-                                Map Slider
+                            <a class="external-link" href="http://map-comparison.herokuapp.com" title="View Demo" target="_blank" style="background:black">Map Slider
                             </a>
                         </div>
                     </div>
@@ -741,8 +732,7 @@
                     <div class="single-project-link">
                         <p>App</p>
                         <div class="link-img">
-                            <a class="external-link" href="https://luletblogapp.herokuapp.com" title="decodespace" target="_blank">
-                                <img class="link-icon" src="images/project_imgs/MasterMind/MM_Project_logo_3.png" alt="Game logo">
+                            <a class="external-link" href="https://luletblogapp.herokuapp.com" title="View App" target="_blank" style="background:black">Blogging App
                             </a>
                         </div>
                     </div>
