--- a/index.html
+++ b/index.html
@@ -28,22 +28,88 @@
             </div>
         </nav>
 
-        <!-- ABOUT PAGE -->
+        <!-- ABOUT PAGE V2-->
         <section id="about" class="about-view page">
-            <!-- Personal summary -->
-            <div class="main-summary main-about">
+            <div class="aboutDisplay">
                 <div class="headingView pageTitle">
                     <h2>About</h2>
                     <p class="subtitle">A couple of bits about me</p>
                 </div>
-                <div class="intro-summary">
-                    <div class="descrBox">
-                        <p class="detailText">I am a human, possibly, who enjoys creating on and off the web. <br><br>I typically work in frontend web development. However, don't be surprised when you find me in the backend as well. I dabble around there from time to time.</p>
+                <div class="aboutContainer">
+                    <!-- Self summary-->
+                    <div class="intro-summary">
+                        <div class="descrBox">
+                            <p class="detailText">To start off, I am definitely not a bot but a person with super dry jokes, who enjoys creating on and off the web. I typically build stuff in frontend or backend web development. I can also be found lurking in general desktop software environments.</p>
+                        </div>
+                        <div class="scroll-tip">
+                            <span class="tip-text">scroll</span>
+                            <div></div>
+                        </div>    
                     </div>
-                    <div class="scroll-tip">
-                        <span class="tip-text">scroll</span>
-                        <div></div>
-                    </div>    
+
+                    <!-- Core Personal skills -->
+                    <div class="summary main-core">
+                        <div class="section-heading">
+                            <div class="title">
+                                <p>at the <br>core</p>
+                            </div>
+                            <div class="subtitle">
+                                <p>Some interests &#38; values in no particular order</p>
+                            </div>
+                        </div>
+                        <div class="back-detail back-text">
+                            <p>create * destroy<br>mend * repeat</p>
+                        </div>
+                        <div class="section-content about-core">
+                            <p><span class="highlight-text">Tinkering </span> is second nature to me. I break as much as I make, if not more. </p>
+                            <p>Constantly <span class="highlight-text">learning about all the things I don't know</span>, and they are quite a number!</p>
+                            <p>I tend to read a bunch of books at the same time, <span class="highlight-text">laugh at life's ironies</span> &#38; try to soundtrack my existence</p>
+                            <p>I can be<span class="highlight-text"> overly curious</span> at times. It's no wonder I into tech</p>
+                            <p><span class="highlight-text">Family, friends</span> &#38; the great outdoors are dear to me.</p>
+                            <p><span class="highlight-text">Collaboration &#38; Inclusivity!</span> It's exciting to see what a couple of different minds can make together.</p>
+                            <p><span class="highlight-text">Adventure</span> is out there, need I say more!</p>
+                        </div>
+                    </div>
+
+                    <!-- Main skills summary -->
+                    <div class="summary main-skills">
+                        <div class="section-heading">
+                            <div class="title">
+                                <p>my <br>toolbox<br></p>
+                            </div>
+                            <div class="subtitle">
+                                <p>Technologies I am using or learning to use</p>
+                            </div>
+                        </div>                
+                        <div class="section-content about-skills">
+                            <div class="skill-row">
+                                <p class="skill-group">develop</p>
+                                <ul class="skills-list">
+                                    <li>HTML &#38; CSS</li>
+                                    <li>JavaScript</li>
+                                    <li>Python</li>
+                                    <li>Git &#38; GitHub</li>
+                                </ul>
+                            </div>
+                            <div class="skill-row">
+                                <p class="skill-group">design</p>
+                                <ul class="skills-list">
+                                    <li>Figma</li>
+                                    <li>Adobe Sketch</li>
+                                    <li></li>
+                                </ul>
+                            </div>
+                            <div class="skill-row">
+                                <p class="skill-group">learn</p>
+                                <ul class="skills-list">
+                                    <li>NodeJS</li>
+                                    <li>React &#38; more JS</li>
+                                    <li>Digital drawing</li>
+                                </ul>
+                            </div>
+                        </div>
+                    </div>
+
                 </div>
                 <div class="social">
                     <a class="social-link" href="mailto:luletco@gmail.com" title="mail"><img class="social-icon" src="images/icons/mail-light-wheat-40px.png" alt="email link">
@@ -55,68 +121,7 @@
                     <a class="social-link" href="https://codepen.io/loetcodes" title="codepen"><img class="social-icon" src="images/icons/codepen-light-wheat-filled-40px.png" alt="Codepen link">
                     </a>
                 </div>
-            </div>
 
-            <!-- Core Personal skills -->
-            <div class="summary main-core">
-                <div class="section-heading">
-                    <div class="title">
-                        <p>at the <br>core</p>
-                    </div>
-                    <div class="subtitle">
-                        <p>Some interests &#38; values in no particular order</p>
-                    </div>
-                </div>
-                <div class="back-detail back-text">
-                    <p>create<br>destroy<br>mend<br>repeat</p>
-                </div>
-                <div class="section-content about-core">
-                    <p><span class="highlight-text">Tinkering </span> is second nature to me, hence I break as much as I make, if not more. </p>
-                    <p>Constantly <span class="highlight-text">learning about all the things I don't know</span>, and they are quite a number!</p>
-                    <p>I tend to read a bunch of books at the same time, <span class="highlight-text">laugh at life's ironies</span> &#38; try to catch my dreams in the wind.</p>
-                    <p>I can be<span class="highlight-text"> overly curious</span> at times. It's no wonder I am attracted to tech, problem-solving and exploration.</p>
-                    <p><span class="highlight-text">Family, friends</span>, the great outdoors &#38; my future pet are quite dear to me.</p>
-                    <p><span class="highlight-text">Collaboration &#38; Inclusivity!</span> It's exciting to see what a couple of minds can make when brought together.</p>
-                    <p><span class="highlight-text">Adventure</span> is out there, need I say more!</p>
-                </div>
-            </div>
-
-            <!-- Main skills summary -->
-            <div class="summary main-skills">
-                <div class="section-heading">
-                    <div class="title">
-                        <p>my <br>toolbox<br></p>
-                    </div>
-                    <div class="subtitle">
-                        <p>Technologies I use creatively, &#38; those I'm learning to use</p>
-                    </div>
-                </div>                
-                <div class="section-content about-skills">
-                    <div class="skill-row">
-                        <p class="skill-group">develop</p>
-                        <ul class="skills-list">
-                            <li>HTML &#38; CSS</li>
-                            <li>JavaScript</li>
-                            <li>Python</li>
-                            <li>Git &#38; GitHub</li>
-                        </ul>
-                    </div>
-                    <div class="skill-row">
-                        <p class="skill-group">design</p>
-                        <ul class="skills-list">
-                            <li>Figma</li>
-                            <li>Adobe Sketch</li>
-                        </ul>
-                    </div>
-                    <div class="skill-row">
-                        <p class="skill-group">learn</p>
-                        <ul class="skills-list">
-                            <li>NodeJS</li>
-                            <li>React &#38; more JS</li>
-                            <li>Digital drawing</li>
-                        </ul>
-                    </div>
-                </div>
             </div>
         </section>
 
@@ -159,12 +164,12 @@
                         </div>
                         <div class="cardDetails detailView">
                             <div class="cardHeading">
-                                <h3 class="projectTitle">Map Imagery Slider</h3>
+                                <h3 class="projectTitle">Map Imagery Swiper</h3>
                                 <p class="projectType">Web app</p>
                             </div>
                             <div class="cardSummary">
                                 <div class="descrBox">
-                                    <p class="detailText">Web mapping app used to compare multiple imagery datasets on a map using an interactive slider.</p>
+                                    <p class="detailText">Mapping app used to compare multiple imagery datasets on an interactive map using a swiping bar.</p>
                                 </div>
                             </div>
                             <div class="projectTech">
@@ -178,6 +183,33 @@
                     </div>
         
                     <!-- PROJECT 3 -->
+                    <div class="cardTile projectCard">
+                        <div class="cardImg thumbnailView">
+                            <img class="projectImg" src="images/project_imgs/BlogApp/BlogApp_CoverImage.jpg" alt="project thumbnail">
+                        </div>
+                        <div class="cardDetails detailView">
+                            <div class="cardHeading">
+                                <h3 class="projectTitle">Decode Space</h3>
+                                <p class="projectType">Blogging app</p>
+                            </div>
+                            <div class="cardSummary">
+                                <div class="descrBox">
+                                    <p class="detailText">Online blogging app used to write blog posts. Uses python and django in the backend to create, read, update and delete posts.</p>
+                                </div>
+                            </div>
+                            <div class="projectTech">
+                                <span>Python</span>
+                                <span>Django</span>
+                                <span>postgresql</span>
+                                <span>HTML5</span>
+                                <span>CSS3</span>
+                                <span>JavaScript</span>
+                            </div>
+                            <a class="projectLink" href="#blogging-app">More</a>  
+                        </div>
+                    </div>                    
+
+                    <!-- PROJECT 4 -->
                     <div class="cardTile projectCard">
                         <div class="cardImg thumbnailView">
                             <img class="projectImg" src="images/project_imgs/FringeMemory/FringeMemory_CoverImage.png" alt="project thumbnail">
@@ -197,33 +229,6 @@
                                 <span>Pygame</span>
                             </div>
                             <a class="projectLink" href="#fringe-memory">More</a>  
-                        </div>
-                    </div>
-
-                    <!-- PROJECT 4 -->
-                    <div class="cardTile projectCard">
-                        <div class="cardImg thumbnailView">
-                            <img class="projectImg" src="images/project_imgs/BlogApp/BlogApp_CoverImage.jpg" alt="project thumbnail">
-                        </div>
-                        <div class="cardDetails detailView">
-                            <div class="cardHeading">
-                                <h3 class="projectTitle">Decode Space</h3>
-                                <p class="projectType">Blogging app</p>
-                            </div>
-                            <div class="cardSummary">
-                                <div class="descrBox">
-                                    <p class="detailText">Online blogging application with code highlighting and multiple user capabilities used to write dev tutorials.</p>
-                                </div>
-                            </div>
-                            <div class="projectTech">
-                                <span>Python</span>
-                                <span>Django</span>
-                                <span>postgresql</span>
-                                <span>HTML5</span>
-                                <span>CSS3</span>
-                                <span>JavaScript</span>
-                            </div>
-                            <a class="projectLink" href="#blogging-app">More</a>  
                         </div>
                     </div>
         
@@ -530,7 +535,7 @@
             </nav>
             <!-- Footer with links. -->
             <footer id="footer-profile" class="page-footer">
-                <!-- Social Icons. -->
+                <!-- Social Icons -->
                 <div class="contact-links">
                     <a class="social-link" href="mailto:luletco@gmail.com" title="mail">
                         <img class="social-icon" src="images/icons/mail-light-wheat-40px.png" alt="email link">
@@ -573,10 +578,6 @@
                     <h3>Details</h3>
                     <p class="descr-text">This is a desktop memory game in python.<br>One of the things I loved about Fringe (other than fringe science) was the weird hidden glyphs and easter eggs scattered throughout the show. Subtle differences in each glyph gave a different meaning. <br>The aim of this project was to learn more about using pygame. Making a memory game using glyphs from a favourite show was an easy choice.</p>
                 </div>
-                <!-- <div class="info-column link-col">
-                    <h3></h3>
-                    <a></a>
-                </div> -->
             </div>    
             <!-- Projects Image Samples and GIFs -->
             <div class="project-previews">
@@ -796,10 +797,6 @@
                     <h2>Contacts</h2>
                     <p class="subtitle">A couple of ways to reach me</p>
                 </div>
-                <!-- <div class="background-text">
-                    <div class="line-graphic"></div>
-                    <p>let's<br>talk</p>
-                </div> -->
                 <div class="intro-summary">
                     <div class="descrBox">
                         <p class="detailText">If you want to chat or collaborate on a project feel free to reach out through any of my links. <br><br> Now that you got this far, you should know I am currently looking for <span class="highlight-text">a new gig</span> preferrably a full-time position. You can check out my conventional resume here, if you like. I am also open to working on freelance and open source projects. So...lets chat!</p>
