changed the background text to a fainter color

--- a/index.html
+++ b/index.html
@@ -39,7 +39,7 @@
                     <!-- Self summary-->
                     <div class="intro-summary">
                         <div class="descrBox">
-                            <p class="detailText">To start off, I am definitely not a bot but a person with super dry jokes, who enjoys creating on and off the web. I typically build stuff in frontend or backend web development. I can also be found lurking in general desktop software environments.</p>
+                            <p class="detailText"> I am a developer who enjoys building things on and off the web. Aside from that I do enjoy playing and contemplating the quirkiness surrounding human behaviour and existence.<br><br>If you would like to know what I am currently up to, you can check out my blog <a class="highlight-text" href="https://www.loetcodes.com">loet codes</a> where I write about my journey as a developer, lessons I have learnt and those I am un-learning. If you are so inclined, you may also check out my new blog <a class="highlight-text" href="https://www.loetbuilds.com">loet builds</a> where I just started writing tutorials about easy arduino projects anyone can work on.<br>Ocassionally I do post articles on <a class="highlight-text" href="https://medium.com/@loetcodes">Medium</a> and tutorials on <a class="highlight-text" href="https://dev.to/loetcodes">Dev.to</a> as well.</p>
                         </div>
                         <div class="scroll-tip">
                             <span class="tip-text">scroll</span>
@@ -58,7 +58,7 @@
                             </div>
                         </div>
                         <div class="back-detail back-text">
-                            <p>create * destroy<br>mend * repeat</p>
+                            <p>create<br>destroy<br>mend<br>repeat</p>
                         </div>
                         <div class="section-content about-core">
                             <p><span class="highlight-text">Tinkering </span> is second nature to me. I break as much as I make, if not more. </p>
